--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,6 +11,17 @@ h1 {
     text-align: center;
 }
 
+h2 {
+    color: white;
+    font-weight: 300;
+    font-size: 42px;
+}
+
+p {
+    color: gray;
+    font-size: 21px;
+}
+
 a {
     color: aquamarine;
     font-size: 16px;
